--- a/就业班.md
+++ b/就业班.md
@@ -1,6 +1,6 @@
-### 就业班
+## 就业班
 
-#### 0 网络编程
+### 0 网络编程
 
 所谓的网络编程就是，让在不同的电脑上的软件能够进行数据传递，即进程之间的通信
 
@@ -155,6 +155,552 @@ str.encode(encoding="utf-8", errors="strict")
 ```
 
 其中的encoding是指在解码编码过程中使用的编码(此处指“编码方案”是名词)，errors是指错误的处理方案。
+
+##### TCP
+
+**TCP协议，传输控制协议（英语：Transmission Control Protocol，缩写为 TCP）**是一种面向连接的、可靠的、基于字节流的传输层通信协议，由IETF的RFC 793定义。
+
+TCP通信需要经过**创建连接、数据传送、终止连接**三个步骤。TCP通信模型中，在通信开始之前，一定要先 **建立相关的链接**，才能发送数据 ，类似于生活中，"打电话"
+
+udp通信模型中，在通信开始之前，不需要建立相关的链接，只需要发送数据即可，类似于生活中，"写信" 
+
+TCP特点
+
+1. 面向连接
+
+   通信双方必须先建立连接才能进行数据的传输，双方都必须为该连接分配必要的系统内核资源，以管理连接的状态和连接上的传输。
+
+   双方间的数据传输都可以通过这一个连接进行；完成数据交换后，双方必须断开此连接，以释放系统资源。这种连接是一对一的，因此 **TCP不适用于广播** 的应用程序，基于广播的应用程序请使用UDP协议。
+
+2. 可靠传输
+
+   - **TCP采用发送应答机制**：TCP发送的每个报文段都必须得到接收方的应答才认为这个TCP报文段传输成功
+
+   - **超时重传**：发送端发出一个报文段之后就启动定时器，如果在定时时间内没有收到应答就重新发送这个报文段。
+
+     TCP为了保证不发生丢包，就给每个包一个序号，同时序号也保证了传送到接收端实体的包的按序接收。然后接收端实体对已成功收到的包发回一个相应的确认（ACK）；如果发送端实体在合理的往返时延（RTT）内未收到确认，那么对应的数据包就被假设为已丢失将会被进行重传。
+
+   - **错误校验**：TCP用一个校验和函数来检验数据是否有错误；在发送和接收时都要计算校验和。
+
+   - **流量控制和阻塞管理**：流量控制用来避免主机发送得过快而使接收方来不及完全收下。
+
+##### TCP与UDP的不同点
+
+- 面向连接（确认有创建三方交握，连接已创建才作传输。）
+- 有序数据传输
+- 重发丢失的数据包
+- 舍弃重复的数据包
+- 无差错的数据传输
+- 阻塞/流量控制
+
+tcp 严格区分客户端解和服务器端，而 udp 不区分
+
+所谓的 **服务器端** ：就是 **提供服务的一方** ，而 **客户端** ，就是需要 **被服务的一方** 
+
+##### tcp客户端构建
+
+示例代码：
+
+```python
+from socket
+# 创建tcp socket
+tcp_client_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+# 与UDP 不同
+# 目的信息
+server_ip = input("请输入服务器ip:")
+server_port = int(input("请输入服务器port:"))
+# 链接服务器
+tcp_client_socket.connect((server_ip, server_port))  # 元组
+# 提示用户输入数据
+send_data = input("请输入要发送的数据：")
+tcp_client_socket.send(send_data.encode("gbk"))  # 因为已经链接 只需内容  send
+# 接收对方发送过来的数据，最大接收1024个字节
+recvData = tcp_client_socket.recv(1024)
+print('接收到的数据为:', recvData.decode('gbk'))
+# 关闭套接字
+tcp_client_socket.close()
+```
+
+##### tcp服务器构建
+
+想要完成一个tcp服务器的功能，需要的流程如下：
+
+1. socket创建一个套接字
+2. bind绑定ip和port
+3. listen使套接字变为可以被动链接
+4. accept等待客户端的链接
+5. recv/send接收发送数据
+
+```python
+from socket
+# 创建tcp socket
+tcp_server_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+# 本地信息
+address = ('', 7788)
+# 绑定
+tcp_server_socket.bind(address)
+# 使用socket创建的套接字默认的属性是主动的，使用listen将其变为被动的，这样就可以接收别人的链接了
+tcp_server_socket.listen(128)
+# 如果有新的客户端来链接服务器，那么就产生一个新的套接字专门为这个客户端服务
+# client_socket用来为这个客户端服务
+# tcp_server_socket就可以省下来专门等待其他新客户端的链接
+client_socket, clientAddr = tcp_server_socket.accept()  # 返回元组 拆包
+# 第一个接收 新的套接字，第二个接收 链接客户端的地址
+# 新的套接字 负责客户端通信，tcp套接字 负责监听 等待新客户端链接
+# 接收对方发送过来的数据
+recv_data = client_socket.recv(1024)  # 接收1024个字节 返回只有数据
+print('接收到的数据为:', recv_data.decode('gbk'))
+# 发送一些数据到客户端
+client_socket.send("thank you !".encode('gbk'))
+# 关闭为这个客户端服务的套接字，只要关闭了，就意味着为不能再为这个客户端服务了，如果还需要服务，只能再次重新连接
+client_socket.close()
+tcp_server_socket.close()
+```
+
+用 如果想让别人能更够打通咱们的电话获取相应服务 类比，需要做以下几件事情：
+
+1. 买个手机  ——  创建套接字
+2. 插上手机卡  ——  绑定ip和port
+3. 设计手机为正常接听状态（即能够响铃）  ——  变为被动链接
+4. 静静的等着别人拨打  ——  等待客户端链接
+
+客户端调用 connect() 时 会 解 accept() 的堵塞
+
+ recv解堵塞，有2种方式：客户端发送过来数据 / 客户端调用close
+
+案例：文件下载，见项目文件 `file_down` 和 `flie`
+
+with 打开文件时，可以在打得开的情况下，出现异常，调用close()；但如果打不开文件，则用with 也会报异常。写时没有关系，文件不存在等情况，会新建文件。读的时候，文件不一定存在，使用with  不合适。
+
+udp 用来收数据 需 bind，tcp client 一般不需要 bind
+
+qq 不绑定端口时 可通过服务器转发
+
+客户端要绑定端口，可能会在多开或端口被占用时出错，因此，一般不绑定。
+
+> **tcp注意点**
+>
+> 1. tcp服务器一般情况下都需要绑定，否则客户端找不到这个服务器
+> 2. tcp客户端一般不绑定，因为是主动链接服务器，所以只要确定好服务器的ip、port等信息就好，本地客户端可以随机
+> 3. tcp服务器中通过listen可以将socket创建出来的主动套接字变为被动的，这是做tcp服务器时必须要做的
+> 4. 当客户端需要链接服务器时，就需要使用connect进行链接，udp是不需要链接的而是直接发送，但是tcp必须先链接，只有链接成功才能通信
+> 5. 当一个tcp客户端连接服务器时，服务器端会有1个新的套接字，这个套接字用来标记这个客户端，单独为这个客户端服务
+> 6. listen后的套接字是被动套接字，用来接收新的客户端的链接请求的，而accept返回的新套接字是标记这个新客户端的
+> 7. 关闭listen后的套接字意味着被动套接字关闭了，会导致新的客户端不能够链接服务器，但是之前已经链接成功的客户端正常通信。
+> 8. 关闭accept返回的套接字意味着这个客户端已经服务完毕
+> 9. 当客户端的套接字调用close后，服务器端会recv解堵塞，并且返回的长度为0，因此服务器可以通过返回数据的长度来区别客户端是否已经下线
+
+### 1 多任务
+
+现在，多核CPU已经非常普及了，但是，即使过去的单核CPU，也可以执行多任务。由于CPU执行代码都是顺序执行的，那么，单核CPU是怎么执行多任务的呢？
+
+答案就是操作系统轮流让各个任务交替执行，任务1执行0.01秒，切换到任务2，任务2执行0.01秒，再切换到任务3，执行0.01秒……这样反复执行下去。表面上看，每个任务都是交替执行的，但是，由于CPU的执行速度实在是太快了，我们感觉就像所有任务都在同时执行一样。（**时间片轮转**）
+
+真正的并行执行多任务只能在多核CPU上实现，但是，由于任务数量远远多于CPU的核心数量，所以，操作系统也会自动把很多任务轮流调度到每个核心上执行。
+
+- 并发：指的是任务数多余cpu核数，通过操作系统的各种任务调度算法，实现用多个任务“一起”执行（实际上总有一些任务不在执行，因为切换任务的速度相当快，看上去一起执行而已）
+- 并行：指的是任务数小于等于cpu核数，即任务真的是一起执行的
+
+#### 线程
+
+python的thread模块是比较底层的模块，python的 **threading模块**是对thread做了一些包装的，可以更加方便的被使用
+
+单线程执行
+
+```python
+import time
+def saySorry():
+    print("我能吃饭了吗？")
+    time.sleep(1)
+if __name__ == "__main__":
+    for i in range(5):
+        saySorry()
+```
+
+多线程执行
+
+```python
+import threading
+import time
+def saySorry():
+    print("亲爱的，我错了，我能吃饭了吗？")
+    time.sleep(1)
+if __name__ == "__main__":
+    for i in range(5):
+        t = threading.Thread(target=saySorry)  # 函数名
+        t.start() #启动线程，即让线程开始执行
+```
+
+1. 可以明显看出使用了多线程并发的操作，花费时间要短很多
+2. 当调用`start()`时，才会真正的创建线程，并且开始执行
+
+##### 主线程等待所有的子线程结束
+
+主线程执行到没有代码时，**会等待所有的子线程结束后才结束**，主线程结束后，整个程序结束
+
+> 原来默认的执行顺序相当于主线程，创建的是子线程，从函数开始执行。
+
+```python
+import threading
+from time import sleep,ctime
+def sing():
+    for i in range(3):
+        print("正在唱歌...%d"%i)
+        sleep(1)
+def dance():
+    for i in range(3):
+        print("正在跳舞...%d"%i)
+        sleep(1)
+print('---开始---:%s'%ctime())
+t1 = threading.Thread(target=sing)
+t2 = threading.Thread(target=dance)
+t1.start()
+t2.start()
+print(threading.enumerate())  # enumerate() 返回list，为 创建的所有线程
+sleep(5)  # 注释此行代码，试试看，程序是否会立马结束？
+# 注释后，主线程会将下面所有代码执行完后等待子进程结束
+print('---结束---:%s'%ctime())
+print(threading.enumerate())
+```
+
+##### 查看线程数量
+
+```python
+import threading
+from time import sleep,ctime
+def sing():
+    for i in range(3):
+        print("正在唱歌...%d"%i)
+        sleep(1)
+def dance():
+    for i in range(3):
+        print("正在跳舞...%d"%i)
+        sleep(1)
+print('---开始---:%s'%ctime())
+t1 = threading.Thread(target=sing)
+t2 = threading.Thread(target=dance)
+t1.start()
+t2.start()
+while True:
+    length = len(threading.enumerate())
+    print('当前运行的线程数为：%d'%length)
+    if length<=1:
+        break
+    sleep(0.5)
+```
+
+线程的运行没有先后顺序！多线程的执行顺序不确定，可通过适当延时，保证线程执行顺序
+
+```python
+import threading
+import time
+def test1():
+    for i in range(5):
+        print("-----test1---%d---" % i)
+def test2():
+    for i in range(5):
+        print("-----test2---%d---" % i)
+t1 = threading.Thread(target=test1)
+t2 = threading.Thread(target=test2)
+t1.start()
+time.sleep(1)  # 先令t1线程执行完
+print("---1---")
+t2.start()
+time.sleep(1)  # 再令t2线程执行完
+print("---2---")
+print(threading.enumerate())
+```
+
+如果创建Thread时执行的函数，运行结束，那么意味着 这个子线程结束了(示例程序中只需要看list长度)
+
+```python
+import threading
+import time
+def test1():
+    for i in range(5):
+        print("-----test1---%d---" % i)
+        time.sleep(1)
+    # 如果创建Thread时执行的函数，运行结束那么意味着 这个子线程结束了....
+def test2():
+    for i in range(10):
+        print("-----test2---%d---" % i)
+        time.sleep(1)
+t1 = threading.Thread(target=test1)
+t2 = threading.Thread(target=test2)
+t1.start()
+t2.start()
+while True:
+    print(threading.enumerate())
+    if len(threading.enumerate())<=1:
+        break
+    time.sleep(1)
+```
+
+**子线程在调用Thread创建的实例对象的 start() 方法时才会 创建线程 并让线程开始运行，threading.Thread 不会创建线程**，只是一个对象
+
+```python
+# 验证什么时候创建线程，什么时候线程执行
+# 创建线程：线程list 有两个值；线程执行：输出test1中的print语句
+import threading
+import time
+def test1():
+    for i in range(5):
+        print("-----test1---%d---" % i)
+        time.sleep(1)
+print(threading.enumerate())  # 在调用Thread之前先打印当前线程信息
+t1 = threading.Thread(target=test1)
+print(threading.enumerate())  # 在调用Thread之后打印
+t1.start()
+time.sleep(2)
+print(threading.enumerate())  # 在调用start之后打印
+```
+
+##### 创建线程方式
+
+- 函数：Thread(target=saySorry)   —— 线程执行函数中代码
+- 类：定义类 继承 Thread 。继承 Thread 时，必须定义 run() 方法，调用 start() 时 会自动调用 run()  —— 线程执行run中代码
+
+```python
+# 线程执行代码的封装   
+import threading
+import time
+class MyThread(threading.Thread):
+    def run(self):
+        for i in range(3):
+            time.sleep(1)
+            msg = "I'm "+self.name+' @ '+str(i)  # name属性中保存的是当前线程的名字，自动指定
+            print(msg)
+def test():
+    for i in range(5):
+        t = MyThread()
+        t.start()
+test()
+```
+
+说明：
+
+- python的threading.Thread类有一个run方法，用于定义线程的功能函数，可以在自己的线程类中覆盖该方法。而创建自己的线程实例后，通过Thread类的start方法，可以启动该线程，交给python虚拟机进行调度，当该线程获得执行的机会时，就会调用run方法执行线程。当线程的run()方法结束时该线程完成。
+-  从代码和执行结果我们可以看出，多线程程序的执行顺序是不确定的。当执行到sleep语句时，线程将被阻塞（Blocked），到sleep结束后，线程进入就绪（Runnable）状态，等待调度。而线程调度将自行选择一个线程执行。上面的代码中只能保证每个线程都运行完整个run函数，但是线程的启动顺序、run函数中每次循环的执行顺序都不能确定。 
+
+##### 多线程共享全局变量
+
+在函数中 对全局变量进行修改时，是否需要使用 global ，需要看是否对全局变量的指向进行修改；如果修改了指向，即让全局变量指向了新的内存地址，则必须使用 global ；如果仅仅修改了指向的空间中的数据，则不必使用 global
+
+```python
+# 这使用了两种传变量方式 -- 直接用（全局变量） / 通过 线程的args参数    虽然这g_nums 也是全局变量
+import threading
+import time
+g_num = 100
+g_nums = [11, 22]
+def test1(temp):
+    global g_num
+    g_num += 99
+    temp.append(33)
+    print("-----in test1 g_num=%d, temp=%s----" % (g_num, str(temp)))
+def test2(temp):
+    print("-----in test2 g_num=%d, temp=%s----" % (g_num, str(temp)))
+def main():
+    # target指定将来 这个线程去哪个函数执行代码
+    # args指定将来调用 函数的时候 传递什么数据过去
+    t1 = threading.Thread(target=test1, args=(g_nums,))  # args 参数为元组，所以有，
+    t2 = threading.Thread(target=test2, args=(g_nums,))
+    t1.start()
+    time.sleep(1)
+    t2.start()
+    time.sleep(1)
+    print("-----in main Thread g_num=%d, g_nums=%s----" % (g_num, str(g_nums)))
+if __name__ == "__main__":
+    main()
+```
+
+##### 资源竞争问题
+
+多线程开发可能遇到的问题：如果**多个线程同时**对**同一个全局变量操作**，会出现**资源竞争问题**，从而数据结果会不正确。
+
+示例：
+
+> 假设两个线程t1和t2都要对全局变量g_num(默认是0)进行加1运算，t1和t2都各对g_num加10次，g_num的最终的结果应该为20。但是由于是多线程同时操作，有可能出现下面情况：
+>
+> 1. 在g_num=0时，t1取得g_num=0。此时系统把t1调度为”sleeping”状态，把t2转换为”running”状态，t2也获得g_num=0
+> 2. 然后t2对得到的值进行加1并赋给g_num，使得g_num=1
+> 3. 然后系统又把t2调度为”sleeping”，把t1转为”running”。线程t1又把它之前得到的0加1后赋值给g_num。
+> 4. 这样导致虽然t1和t2都对g_num加1，但结果仍然是g_num=1
+
+```python
+import threading
+import time
+g_num = 0
+def work1(num):
+    global g_num
+    for i in range(num):
+        g_num += 1
+    print("----in work1, g_num is %d---"%g_num)
+def work2(num):
+    global g_num
+    for i in range(num):
+        g_num += 1
+    print("----in work2, g_num is %d---"%g_num)
+print("---线程创建之前g_num is %d---"%g_num)
+t1 = threading.Thread(target=work1, args=(1000000,))
+t1.start()
+t2 = threading.Thread(target=work2, args=(1000000,))
+t2.start()
+while len(threading.enumerate()) != 1:
+    time.sleep(1)
+print("2个线程对同一个全局变量操作之后的最终结果是:%s" % g_num)
+# 运行结果：
+# ---线程创建之前g_num is 0---
+# ----in work1, g_num is 1088005---
+# ----in work2, g_num is 1286202---
+# 2个线程对同一个全局变量操作之后的最终结果是:1286202
+```
+
+##### 同步
+
+同步就是协同步调，按预定的先后次序进行运行。  如进程、线程同步，可理解为进程或线程A和B一块配合，A执行到一定程度时要依靠B的某个结果，于是停下来，示意B运行;B执行，再将结果给A;A再继续操作。 
+
+##### 互斥锁
+
+- 当多个线程几乎同时修改某一个共享数据的时候，需要进行同步控制
+- 线程同步能够保证多个线程安全访问竞争资源，最简单的同步机制是引入互斥锁。
+- 互斥锁为资源引入一个状态：锁定/非锁定
+
+某个线程要更改共享数据时，先将其锁定，此时资源的状态为“锁定”，其他线程不能更改；直到该线程释放资源，将资源的状态变成“非锁定”，其他的线程才能再次锁定该资源。互斥锁保证了每次只有一个线程进行写入操作，从而保证了多线程情况下数据的正确性。
+
+threading模块中定义了Lock类，可以方便的处理锁定：
+
+```python
+mutex = threading.Lock()  # 创建互斥锁 默认没有上锁 上锁只能上一次
+mutex.acquire()  # 锁定
+mutex.release()  # 释放
+```
+
+注意：
+
+- 如果这个锁之前是没有上锁的，那么acquire不会堵塞
+- 如果在调用acquire对这个锁上锁之前 它已经被 其他线程上了锁，那么此时acquire会堵塞，直到这个锁被解锁为止
+- 上锁的代码越少越好
+
+>  谁先上锁，谁先做事情；谁后上锁，谁就做不了
+
+示例的解决：
+
+```python
+import threading
+import time
+g_num = 0  # 定义一个全局变量
+def test1(num):
+    global g_num
+    # 上锁，如果之前没有被上锁，那么此时 上锁成功
+    # 如果上锁之前 已经被上锁了，那么此时会堵塞在这里，直到 这个锁被解开位置
+    for i in range(num):
+        mutex.acquire()  # 上锁 如果都在for外面上锁，会执行完整个for循环，不符合 上锁的代码越少越好
+        g_num += 1
+        mutex.release()  # 解锁
+    print("-----in test1 g_num=%d----" % g_num)
+def test2(num):
+    global g_num
+    for i in range(num):
+        mutex.acquire()  # 上锁
+        g_num += 1
+        mutex.release()  # 解锁
+    print("-----in test2 g_num=%d=----" % g_num)
+mutex = threading.Lock()  # 创建一个互斥锁，默认是没有上锁的
+def main():
+    t1 = threading.Thread(target=test1, args=(1000000,))
+    t2 = threading.Thread(target=test2, args=(1000000,))
+    t1.start()
+    t2.start()
+    # 等待上面的2个线程执行完毕....
+    time.sleep(2)
+    print("-----in main Thread g_num = %d---" % g_num)
+if __name__ == "__main__":
+    main()
+# 运行结果：
+# ---test1---g_num=1920255
+# ---test2---g_num=2000000
+# 2个线程对同一个全局变量操作之后的最终结果是:2000000
+```
+
+##### 死锁
+
+在线程间共享多个资源的时候，如果两个线程分别占有一部分资源并且同时等待对方的资源，就会造成死锁。 
+
+示例：
+
+```python
+import threading
+import time
+class MyThread1(threading.Thread):
+    def run(self):
+        mutexA.acquire()  # 对mutexA上锁
+        # mutexA上锁后，延时1秒，等待另外那个线程 把mutexB上锁
+        print(self.name+'----do1---up----')
+        time.sleep(1)
+        mutexB.acquire()  # 此时会堵塞，因为这个mutexB已经被另外的线程抢先上锁了
+        print(self.name+'----do1---down----')
+        mutexB.release()
+        mutexA.release()  # 对mutexA解锁
+class MyThread2(threading.Thread):
+    def run(self):
+        mutexB.acquire()  # 对mutexB上锁
+        # mutexB上锁后，延时1秒，等待另外那个线程 把mutexA上锁
+        print(self.name+'----do2---up----')
+        time.sleep(1)
+        mutexA.acquire()  # 此时会堵塞，因为这个mutexA已经被另外的线程抢先上锁了
+        print(self.name+'----do2---down----')
+        mutexA.release()
+        mutexB.release()  # 对mutexB解锁
+mutexA = threading.Lock()
+mutexB = threading.Lock()
+if __name__ == '__main__':
+    t1 = MyThread1()
+    t2 = MyThread2()
+    t1.start()
+    t2.start()
+```
+
+避免死锁：设计时避免（银行家算法） /  添加超时时间等
+
+##### 银行家算法 
+
+
+
+ 银行家算法是从当前状态出发，逐个按安全序列检查各客户谁能完成其工作，然后假定其完成工作且归还全部贷款，再进而检查下一个能完成工作的客户，......。如果所有客户都能完成工作，则找到一个安全序列，银行家才是安全的。 
+
+##### 案例：多任务版UTP聊天器
+
+> 需求：
+>
+> - 编写一个有2个线程的程序
+> - 线程1用来接收数据然后显示
+> - 线程2用来检测键盘数据然后通过udp发送数据
+
+实现：`udp_threading_app.py` 文件
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
