--- a/就业班.md
+++ b/就业班.md
@@ -1,4 +1,4 @@
-## ```就业班
+## 就业班
 
 ### 0 网络编程
 
@@ -69,6 +69,8 @@ s.close()
 套接字使用流程 与 文件的使用流程很类似：创建套接字 --> 使用套接字收/发数据 --> 关闭套接字
 
 #### UDP
+
+![udp_new](https://user-images.githubusercontent.com/51505633/79089472-dc12f980-7d78-11ea-8f35-4bdf053ac735.jpg)
 
 ##### udp网络程序-发送数据
 
@@ -161,6 +163,8 @@ str.encode(encoding="utf-8", errors="strict")
 TCP通信需要经过**创建连接、数据传送、终止连接**三个步骤。TCP通信模型中，在通信开始之前，一定要先 **建立相关的链接**，才能发送数据 ，类似于生活中，"打电话"
 
 udp通信模型中，在通信开始之前，不需要建立相关的链接，只需要发送数据即可，类似于生活中，"写信" 
+
+![tcp](https://user-images.githubusercontent.com/51505633/79089039-2c895780-7d77-11ea-849b-f0bc63202e62.jpg)
 
 ##### TCP特点
 
@@ -336,6 +340,8 @@ with 打开文件时，可以在打得开的情况下，出现异常，调用clo
 答案就是操作系统轮流让各个任务交替执行，任务1执行0.01秒，切换到任务2，任务2执行0.01秒，再切换到任务3，执行0.01秒……这样反复执行下去。表面上看，每个任务都是交替执行的，但是，由于CPU的执行速度实在是太快了，我们感觉就像所有任务都在同时执行一样。（**时间片轮转**）
 
 真正的并行执行多任务只能在多核CPU上实现，但是，由于任务数量远远多于CPU的核心数量，所以，操作系统也会自动把很多任务轮流调度到每个核心上执行。
+
+##### 并发与并行
 
 - 并发：指的是任务数多余cpu核数，通过操作系统的各种任务调度算法，实现用多个任务“一起”执行（实际上总有一些任务不在执行，因为切换任务的速度相当快，看上去一起执行而已）
 - 并行：指的是任务数小于等于cpu核数，即任务真的是一起执行的
@@ -730,7 +736,7 @@ if __name__ == '__main__':
 
 程序：例如xxx.py这是程序，是一个静态的
 
-进程：一个程序运行起来后，**代码 +** 用到的**资源** 称之为进程，它是操作系统分配资源的基本单元。
+进程：一个程序运行起来后，**代码 +** 用到的**资源** 称之为进程，它是操作系统**分配资源**的**基本单元**。
 
 不仅可以通过线程完成多任务，进程也可以
 
@@ -738,7 +744,7 @@ if __name__ == '__main__':
 
 工作中，任务数往往大于cpu的核数，即一定有一些任务正在执行，而另外一些任务在等待cpu进行执行，因此导致了有了不同的状态。
 
-
+![process](https://user-images.githubusercontent.com/51505633/79089066-462a9f00-7d77-11ea-8c9b-428f4ab202df.jpg)
 
 - 就绪态：运行的条件都已经慢去，正在等在cpu执行
 - 执行态：cpu正在执行其功能
@@ -789,21 +795,21 @@ import time
 def run_proc():
     """子进程要执行的代码"""
     while True:
-        print("----子进程 pid=%d >>> 父进程pid=%d----" % (os.getpid(), os.getppid()))
+        print("--子进程 pid=%d >2> 父进程pid=%d--" % (os.getpid(), os.getppid()))
         time.sleep(1)
 if __name__ == '__main__':
-    print("----主进程 pid=%d --- 父进程pid=%d----" % (os.getpid(), os.getppid()))
+    print("--主进程 pid=%d >0> 父进程pid=%d--" % (os.getpid(), os.getppid()))
     # os.getpid()获取当前进程id     os.getppid()获取父进程id
     p = Process(target=run_proc)
     p.start()
     while True:
-        print("----主进程 pid=%d === 父进程pid=%d----" % (os.getpid(), os.getppid()))
+        print("--主进程 pid=%d >1> 父进程pid=%d--" % (os.getpid(), os.getppid()))
         time.sleep(1)
 ```
 
-VScode 运行时，主程序的父进程id为执行程序的终端的进程号，主进程和子进程都为 Python 解释器
+(VScode中)主程序的父进程id为执行程序的终端的进程号，主进程和子进程都为 Python 解释器
 
-> 强制结束一个进程时，其他进程继续运行，强制结束所有进程后，**命令行阻塞(什么状态？等待？)**；但如何主进程已经运行结束(非无限循环)，强制结束子进程后，代码运行终止。
+> 强制结束一个进程时，其他进程继续运行，强制结束所有进程后，**命令行阻塞**；但如何主进程已经运行结束(非无限循环)，强制结束子进程后，代码运行终止。
 
 ##### Process 语法结构
 
@@ -944,17 +950,17 @@ if not q.empty():
 >
 > - **Queue.get([block[, timeout]])**：获取队列中的一条消息，然后将其从列队中移除，block默认值为True；
 >
->   1）如果block使用默认值，且没有设置timeout（单位秒），消息列队如果为空，此时程序将被阻塞（停在读取状态），直到从消息列队读到消息为止，如果设置了timeout，则会等待timeout秒，若还没读取到任何消息，则抛出"Queue.Empty"异常；
+>     1）如果block使用默认值，且没有设置timeout（单位秒），消息列队如果为空，此时程序将被阻塞（停在读取状态），直到从消息列队读到消息为止，如果设置了timeout，则会等待timeout秒，若还没读取到任何消息，则抛出"Queue.Empty"异常；
 >
->   2）如果block值为False，消息列队如果为空，则会立刻抛出"Queue.Empty"异常；
+>     2）如果block值为False，消息列队如果为空，则会立刻抛出"Queue.Empty"异常；
 >
 > - **Queue.get_nowait()**：相当Queue.get(False)；
 >
 > - **Queue.put(item,[block[, timeout]])**：将item消息写入队列，block默认值为True；
 >
->   1）如果block使用默认值，且没有设置timeout（单位秒），消息列队如果已经没有空间可写入，此时程序将被阻塞（停在写入状态），直到从消息列队腾出空间为止，如果设置了timeout，则会等待timeout秒，若还没空间，则抛出"Queue.Full"异常；
+>     1）如果block使用默认值，且没有设置timeout（单位秒），消息列队如果已经没有空间可写入，此时程序将被阻塞（停在写入状态），直到从消息列队腾出空间为止，如果设置了timeout，则会等待timeout秒，若还没空间，则抛出"Queue.Full"异常；
 >
->   2）如果block值为False，消息列队如果没有空间可写入，则会立刻抛出"Queue.Full"异常；
+>     2）如果block值为False，消息列队如果没有空间可写入，则会立刻抛出"Queue.Full"异常；
 >
 > - **Queue.put_nowait(item)**：相当Queue.put(item, False)；
 
@@ -1069,6 +1075,552 @@ if __name__=="__main__":
 
 实现：`dir_copy_process.py` 文件
 
+#### 协程
+
+##### 迭代器 
+
+> 迭代是访问集合元素的一种方式。迭代器是一个可以记住遍历的位置的对象。迭代器对象从集合的第一个元素开始访问，直到所有的元素被访问完结束。迭代器只能往前不会后退。
+
+###### 可迭代对象 Iterable
+
+可以对list、tuple、str等类型的数据使用for...in...的循环语法从其中依次拿到数据进行使用，我们把这样的过程称为遍历，也叫**迭代**。
+
+**但是，是否所有的数据类型都可以放到for...in...的语句中，然后让for...in...每次从中取出一条数据供我们使用，即供我们迭代吗？**
+
+```python
+# MyList 的目的 --> 自己实现一个额可迭代的对象
+# 我们自定义一个容器MyList用来存放数据，可以通过add方法向其中添加数据
+class MyList(object):
+    def __init__(self):
+            self.container = []
+    def add(self, item):
+            self.container.append(item)
+mylist = MyList()
+mylist.add(1)
+mylist.add(2)
+mylist.add(3)
+for num in mylist:
+    print(num)
+# TypeError: 'MyList' object is not iterable
+```
+
+自定义了一个容器类型MyList，在将一个存放了多个数据的MyList对象放到for...in...的语句中，发现for...in...并不能从中依次取出一条数据返回给我们，也就说我们随便封装了一个可以存放多条数据的类型却并不能被迭代使用。 
+
+把可以通过for...in...这类语句迭代读取一条数据供我们使用的对象称之为**可迭代对象（Iterable）**。 
+
+###### 如何判断一个对象是否可以迭代
+
+使用 isinstance() 判断一个对象是否是 Iterable 对象
+
+```python
+from collections import Iterable  # Iterable 是一个类
+print(isinstance([], Iterable))  # True    isinstance 判断是不是一个实例
+print(isinstance('abc', Iterable))  # True
+print(isinstance(mylist, Iterable))  # False
+print(isinstance(100, Iterable))  # False
+```
+
+###### 可迭代对象的本质
+
+对可迭代对象进行迭代使用的过程，发现每迭代一次（即在for...in...中每循环一次）都会返回对象中的下一条数据，一直向后读取数据直到迭代了所有数据后结束。那么，在这个过程中就应该有一个“人”去记录每次访问到了第几条数据，以便每次迭代都可以返回下一条数据。我们把这个能帮助我们进行数据迭代的“人”称为**迭代器(Iterator)**。 
+
+**可迭代对象的本质**就是可以向我们**提供**一个这样的中间“人”即**迭代器**帮助我们对其**进行迭代遍历**使用。 
+
+可迭代对象通过`__iter__`方法向我们提供一个迭代器，我们在迭代一个可迭代对象的时候，实际上就是先获取该对象提供的一个迭代器，然后通过这个迭代器来依次获取对象中的每一个数据.
+
+**也就是说，一个具备了`__iter__`方法的对象，就是一个可迭代对象。**
+
+```python
+from collections import Iterable
+class MyList(object):
+    def __init__(self):
+        self.container = []
+    def add(self, item):
+        self.container.append(item)
+    def __iter__(self):  # 如果想要一个对象成为一个可迭代的对象，即可使用for，那么必须实现__iter__方法
+        """必须返回一个具有__iter__和__next__方法的引用 —— 迭代器对象"""
+        pass  # 我们暂时忽略如何构造一个迭代器对象
+mylist = MyList()
+print("判断mylist是否是可以迭代的对象:", isinstance(mylist, Iterable))  # True    print里面是一个元组
+for num in mylist:
+    print(num)
+# iter() returned non-iterator of type 'NoneType'
+```
+
+添加了 `__iter__` 方法的 mylist 对象已经是一个可迭代对象了
+
+###### iter()函数与next()函数
+
+**list、tuple等都是可迭代对象，我们可以通过iter()函数获取这些可迭代对象的迭代器。然后我们可以对获取到的迭代器不断使用next()函数来获取下一条数据。**iter()函数实际上就是调用了可迭代对象的`__iter__`方法。 
+
+```python
+li = [11, 22, 33, 44, 55]
+li_iter = iter(li)
+print(next(li_iter))  # 11
+# ... 省略
+print(next(li_iter))  # 55
+print(next(li_iter))  # StopIteration
+```
+
+当我们已经迭代完最后一个数据之后，再次调用next()函数会抛出StopIteration的异常，来告诉我们所有数据都已迭代完成，不用再执行next()函数了。
+
+###### 如何判断一个对象是否是迭代器
+
+使用 isinstance() 判断一个对象是否是 Iterator 对象 
+
+```python
+from collections import Iterator
+print(isinstance([], Iterator))  # False
+print(isinstance(iter([]), Iterator))  # True
+print(isinstance(iter("abc"), Iterator))  # True
+```
+
+###### 迭代器 Iterator
+
+迭代器是用来帮助我们记录每次迭代访问到的位置，当我们对迭代器使用next()函数的时候，迭代器会向我们返回它所记录位置的下一个位置的数据。实际上，在使用next()函数的时候，调用的就是迭代器对象的`__next__`方法（Python3中是对象的`__next__`方法，Python2中是对象的next()方法）。**所以，我们要想构造一个迭代器，就要实现它的`__next__`方法**。但这还不够，python要求迭代器本身也是可迭代的，所以我们还要为迭代器实现`__iter__`方法，而`__iter__`方法要返回一个迭代器，迭代器自身正是一个迭代器，所以迭代器的`__iter__`方法返回自身即可。
+
+**一个实现了`__iter__`方法和`__next__`方法的对象，就是迭代器。**
+
+```python
+import time
+from collections import Iterator
+class MyList(object):
+    """自定义的一个可迭代对象"""
+    def __init__(self):
+        self.items = []
+    def add(self, val):
+        self.items.append(val)
+    def __iter__(self):
+        return MyIterator()  # 创建了一个实例对象，返回对象的引用  这样就满足for条件了
+        # 先执行右边 创建实例对象，然后把对象的引用返回
+class MyIterator(object):
+    """自定义的供上面可迭代对象使用的一个迭代器"""
+    def __next__(self):  # 必须有的方法
+        # pass
+        return 111
+    def __iter__(self):  # 必须有的方法
+        pass
+if __name__ == '__main__':
+    mylist = MyList()
+    mylist.add(1)
+    mylist.add(2)
+    mylist.add(3)
+    # iter(mylist)  # 自动调用__iter__方法，得到返回值 返回的是一个迭代器（具有 两个必须有的方法）
+    mylist_iterator = iter(mylist)
+    print("判断mylist_iterator是否是迭代器:", isinstance(mylist_iterator, Iterator))  # True
+    print(next(mylist_iterator))  # 111  next函数自动调用__next__方法，得到其返回值
+    for num in mylist:
+        print(num)  # 会一直输出 111
+        time.sleep(1)
+    # 把 __next__方法 的返回值改为 mylist 中的内容，就实现了 自己实现一个可以迭代的对象
+```
+
+`for temp in xxx_obj` 会干什么：
+
+1. 判断 xxx_obj 是否是可迭代对象
+2. 在1成立的前提下，调用iter函数，得到xxx_obj对象的`__iter__` 方法的返回值
+3. `__iter__` 方法的返回值 是一个迭代器
+4. for循环通过迭代器的 next函数取值，调用迭代器中的 `__next__`，返回什么，temp就是什么（这会执行多次）
+
+```python
+class MyList(object):
+    """自定义的一个可迭代对象"""
+    def __init__(self):
+        self.items = []
+    def add(self, val):
+        self.items.append(val)
+    def __iter__(self):
+        myiterator = MyIterator(self)  # 括号中为对象的引用，为了使__next__得到self.items
+        return myiterator  # 返回对象的引用
+class MyIterator(object):
+    """自定义的供上面可迭代对象使用的一个迭代器"""
+    def __init__(self, mylist):  # mylist 就指向了MyList类的对象
+        self.mylist = mylist  # 定义一个属性指向了MyList类的对象
+        self.current = 0  # current用来记录当前访问到的位置 这个不能定义在__next__中  实例属性
+    def __next__(self):  # 必须有的方法
+        if self.current < len(self.mylist.items):  # for循环不知道何时终止，需加判断条件
+            item = self.mylist.items[self.current]  # 得到了指向MyList类的对象的items列表
+            self.current += 1
+            return item  # 先 +1 再返回
+        else:  # 没有的话 一直为 None，需自定义异常
+            raise StopIteration  # 迭代器取完的异常，for会自动停止
+    def __iter__(self):  # 必须有的方法
+        pass
+if __name__ == '__main__':
+    mylist = MyList()
+    mylist.add(1)
+    mylist.add(2)
+    mylist.add(3)
+    for num in mylist:
+        print(num)
+# 实现了 自己实现一个可以迭代的对象
+```
+
+在 MyList 类中 `__iter__` 返回 self，省一个对象，是否可行？可行。
+
+```python
+# for 时判断类是否有__iter__(可迭代)，由于返回为自己，自己还有__next__，因此也为迭代器
+# for 会调用 __iter__中返回对象的__next__方法
+class MyList(object):
+    """自定义的一个可迭代对象"""
+    def __init__(self):
+        self.items = []
+        self.current = 0
+    def add(self, val):
+        self.items.append(val)
+    def __iter__(self):
+        return self
+    def __next__(self):
+        if self.current < len(self.items):
+            item = self.items[self.current]
+            self.current += 1
+            return item
+        else:
+            raise StopIteration
+if __name__ == '__main__':
+    mylist = MyList()
+    mylist.add(1)
+    mylist.add(2)
+    mylist.add(3)
+    for num in mylist:
+        print(num)
+# 迭代器一定为可迭代对象
+```
+
+###### for...in...循环的本质
+
+`for item in Iterable`循环的本质就是先通过iter()函数获取可迭代对象Iterable的迭代器，然后对获取到的迭代器不断调用next()方法来获取下一个值并将其赋值给item，当遇到StopIteration的异常后循环结束。 
+
+###### 迭代器的应用场景
+
+迭代器最核心的功能就是可以通过next()函数的调用来返回下一个数据值。如果每次返回的数据值不是在一个已有的数据集合中读取的，而是通过程序按照一定的规律计算生成的，那么也就意味着可以不用再依赖一个已有的数据集合，也就是说不用再将所有要迭代的数据都一次性缓存下来供后续依次读取，这样可以节省大量的存储（内存）空间。 
+
+举个例子，比如，数学中有个著名的斐波拉契数列（Fibonacci），数列中第一个数为0，第二个数为1，其后的每一个数都可由前两个数相加得到：0, 1, 1, 2, 3, 5, 8, 13, 21, 34, ...
+
+现在我们想要通过for...in...循环来遍历迭代斐波那契数列中的前n个数。那么这个斐波那契数列我们就可以用迭代器来实现，每次迭代都通过数学计算来生成下一个数。
+
+```python
+class FibIterator(object):
+    """斐波那契数列迭代器"""
+    def __init__(self, n):
+        self.n = n  # 指明生成数列的前n个数
+        self.current = 0  # current用来保存当前生成到数列中的第几个数了
+        self.num1 = 0  # num1用来保存前前一个数，初始值为数列中的第一个数0
+        self.num2 = 1  # num2用来保存前一个数，初始值为数列中的第二个数1
+    def __next__(self):
+        """被next()函数调用来获取下一个数"""
+        if self.current < self.n:
+            num = self.num1
+            self.num1, self.num2 = self.num2, self.num1+self.num2
+            self.current += 1
+            return num  # 一直将self.num1作为输出的值
+        else:
+            raise StopIteration
+    def __iter__(self):
+        """迭代器的__iter__返回自身即可"""
+        return self
+if __name__ == '__main__':
+    fib = FibIterator(10)
+    for num in fib:
+        print(num, end=" ")
+```
+
+###### 并不是只有for循环能接收可迭代对象
+
+除了for循环能接收可迭代对象，list、tuple等也能接收。
+
+```python
+li = list(FibIterator(15))
+print(li)
+tp = tuple(FibIterator(6))
+print(tp)
+```
+
+###### 小结
+
+迭代器用极小的代码，极小的内存空间，生成数据
+
+##### 生成器
+
+利用迭代器，我们可以在每次迭代获取数据（通过next()方法）时按照特定的规律进行生成。但是我们在实现一个迭代器时，关于当前迭代到的状态需要我们自己记录，进而才能根据当前状态生成下一个数据。为了达到记录当前状态，并配合next()函数进行迭代使用，我们可以采用更简便的语法，即**生成器(generator)。生成器是一类特殊的迭代器**。 
+
+###### 创建生成器方法1 - ()
+
+把一个列表生成式的 [ ] 改成 ( )  —— 了解
+
+```python
+L = [x*2 for x in range(5)]
+print(L)  # [0, 2, 4, 6, 8]
+G = (x*2 for x in range(5))
+print(G)  # <generator object <genexpr> at 0x00000196AB379308>
+for i in G:
+    print(i, end=" ")  # 0 2 4 6 8
+```
+
+创建 L 和 G 的区别仅在于最外层的 [ ] 和 ( ) ， L 是一个列表，而 G 是一个生成器。我们可以直接打印出列表L的每一个元素，而对于生成器G，我们可以按照迭代器的使用方法来使用，即可以通过next()函数、for循环、list()等方法使用。 
+
+###### 创建生成器方法2 - 定义函数
+
+```python
+# 使用生成器完成 斐波那契数列
+def fib(n):
+    current = 0
+    num1, num2 = 0, 1
+    while current < n:
+        num = num1
+        num1, num2 = num2, num1+num2
+        current += 1
+        yield num
+    return 'done'
+F = fib(10)  # 只会将n取值为10，不会执行函数代码
+for num in F:  # for循环时，开始执行函数，到yield语句时，返回内容（暂停而不是结束），再次循环时，从yield语句开始执行后续语句
+    print(num)
+```
+
+在使用生成器实现的方式中，我们将原本在迭代器`__next__`方法中实现的基本逻辑放到一个函数中来实现，但是将每次迭代返回数值的return换成了yield，此时新定义的函数便不再是函数，而是一个**生成器（模板）**了。(理解为类)
+
+简单来说：只要**在def中有yield关键字**的 就称为 **生成器**。
+
+此时按照调用函数的方式使用生成器就不再是执行函数体了，而是会返回一个生成器对象，然后就可以按照使用迭代器的方式来使用生成器了。 
+
+```python
+def create_num(all_num):
+    print("--1--", end=" ")
+    a, b = 0, 1
+    current_num = 0
+    while current_num < all_num:
+        print("--2--", end=" ")
+        yield a  # 如果一个函数中有yield语句，那么这个就不在是函数，而是一个生成器的模板
+        print("--3--", end=" ")
+        a, b = b, a+b
+        current_num += 1
+        print("--4--", end=" ")
+    return "done"
+# 如果在调用create_num的时候，发现这个函数中有yield那么此时，不是调用函数，而是创建一个生成器对象
+obj = create_num(10)
+ret = next(obj)
+print(ret, end=" ")
+ret = next(obj)
+print(ret, end=" ")
+print("=" * 10)
+obj2 = create_num(2)  # 创建第二个生成器对象
+while True:  # 通过异常判断生成器已经结束
+    try:
+        ret = next(obj2)
+        print(ret, end=" ")
+    except StopIteration as ret:
+        print(ret.value)
+        # 读取 return 的值  想要得到生成器对象return结果，需要捕获异常，再通过value属性获取
+        break
+# --1-- --2-- 0 --3-- --4-- --2-- 1 ==========
+# --1-- --2-- 0 --3-- --4-- --2-- 1 --3-- --4-- done
+```
+
+用for循环调用generator时，发现拿不到generator的return语句的返回值。如果想要拿到返回值，必须捕获StopIteration错误，返回值包含在StopIteration的value中 
+
+###### 创建生成器方法3 - send()
+
+ 使用send()函数来唤醒执行。使用send()函数的一个好处是可以在唤醒的同时向断点处传入一个附加数据。 
+
+```python
+def create_num(all_num):
+    a, b = 0, 1
+    current_num = 0
+    while current_num < all_num:
+        ret = yield a
+        print("ret>>>", ret, end=" ")
+        a, b = b, a+b
+        current_num += 1
+obj = create_num(10)
+# obj.send(None)  # send一般不会放到第一次启动生成器，如果非要这样做 那么传递None
+ret = next(obj)
+print(ret, end=" ")
+ret = next(obj)
+print(ret, end=" ")
+# send里面的数据会 传递给第5行，当做yield a的结果，然后ret保存这个结果,,, 
+# send的结果是下一次调用yield时 yield后面的值
+ret = obj.send("hahahha")  
+print(ret, end=" ")
+# 0 ret>>> None 1 ret>>> hahahha 1 
+```
+
+可以使用send修改create_num中的参数，比如修改current_num的值，或者增加一些条件等
+
+###### 小结
+
+生成器：让函数暂停执行
+
+- 使用了yield关键字的函数不再是函数，而是生成器。（使用了yield的函数就是生成器）
+- yield关键字有两点作用：
+  - 保存当前运行状态（断点），然后暂停执行，即将生成器（函数）挂起
+  - 将yield关键字后面表达式的值作为返回值返回，此时可以理解为起到了return的作用
+- 可以使用next()函数让生成器从断点处继续执行，即唤醒生成器（函数）
+- Python3中的生成器可以使用return返回最终运行的返回值
+
+##### 协程 - yield
+
+协程，又称微线程，纤程。英文名Coroutine。 
+
+协程是python个中另外一种实现多任务的方式，只不过比线程更小占用更小执行单元（理解为需要的资源）。 为啥说它是一个执行单元，因为它自带CPU上下文。这样只要在合适的时机， 我们可以把一个协程 切换到另一个协程。 只要这个过程中保存或恢复 CPU上下文那么程序还是可以运行的。
+
+通俗的理解：在一个线程中的某个函数，可以在任何地方保存当前函数的一些临时变量等信息，然后切换到另外一个函数中执行，注意不是通过调用函数的方式做到的，并且切换的次数以及什么时候再切换到原来的函数都由开发者自己确定
+
+```python
+import time
+def work1():
+    while True:
+        print("----work1---")
+        yield
+        time.sleep(0.5)
+def work2():
+    while True:
+        print("----work2---")
+        yield
+        time.sleep(0.5)
+def main():
+    w1 = work1()
+    w2 = work2()
+    # 先让w1运行一会，当w1中遇到yield的时候，返回，然后
+    # 执行w2，当它遇到yield的时候，再次切换到w1中
+    # 这样w1/w2/w1/w2的交替运行，最终实现了多任务....协程
+    while True:
+        next(w1)
+        next(w2)
+if __name__ == "__main__":
+    main()
+# 假的多任务，并发的   一个进程中的一个线程
+```
+
+###### 协程和线程差异
+
+在实现多任务时, 线程切换从系统层面远不止保存和恢复 CPU上下文这么简单。 操作系统为了程序运行的高效性每个线程都有自己缓存Cache等等数据，操作系统还会帮你做这些数据的恢复操作。 所以线程的切换非常耗性能。但是协程的切换只是单纯的操作CPU的上下文，所以一秒钟切换个上百万次系统都抗的住。
+
+##### 协程 - greenlet
+
+ 为了更好使用协程来完成多任务，python中的greenlet模块对其封装，从而使得切换任务变的更加简单。
+
+```python
+from greenlet import greenlet
+import time
+def test1():
+    while True:
+        print("---A--")
+        gr2.switch()
+        time.sleep(0.5)
+def test2():
+    while True:
+        print("---B--")
+        gr1.switch()
+        time.sleep(0.5)
+gr1 = greenlet(test1)  # 返回值是 greenlet 对象
+gr2 = greenlet(test2)
+gr1.switch()  # 切换到gr1中运行
+```
+
+##### 协程 - gevent
+
+greenlet已经实现了协程，但是还得人工切换，python还有一个比greenlet更强大的并且能够自动切换任务的模块`gevent` 
+
+其原理是当一个greenlet遇到IO(指的是input output 输入输出，比如网络、文件操作等)操作时，比如访问网络，就自动切换到其他的greenlet，等到IO操作完成，再在适当的时候切换回来继续执行。
+
+由于IO操作非常耗时，经常使程序处于等待状态，有了gevent为我们自动切换协程，就保证总有greenlet在运行，而不是等待IO
+
+###### gevent的使用
+
+```python
+import gevent
+def f1(n):
+    for i in range(n):
+        print(gevent.getcurrent(), i)  #  gevent.getcurrent() 当前哪一个
+        # time.sleep(0.5)  # 不可以，gevent不认为是耗时操作
+        gevent.sleep(0.5)  # 模拟一个耗时操作 会自动切换
+def f2(n):
+    for i in range(n):
+        print(gevent.getcurrent(), i)
+        gevent.sleep(0.5)
+def f3(n):
+    for i in range(n):
+        print(gevent.getcurrent(), i)
+        gevent.sleep(0.5)
+g1 = gevent.spawn(f1, 5)  # 参数一：去哪执行 二：参数  创建时不会执行
+g2 = gevent.spawn(f2, 5)
+g3 = gevent.spawn(f3, 5)
+g1.join()  # 等待g1执行完  耗时操作，gevent自动开始切换
+g2.join()
+g3.join()
+```
+
+线程结束时协程死亡
+
+延时、堵塞等 都需要使用 gevent 中的，通过打补丁 自动实现
+
+###### 给程序打补丁
+
+```python
+from gevent import monkey
+import gevent
+import random
+import time
+
+# 有耗时操作时需要
+monkey.patch_all()  # 将程序中用到的耗时操作的代码，换为gevent中自己实现的模块
+
+def coroutine_work(coroutine_name):
+    for i in range(10):
+        print(coroutine_name, i)
+        time.sleep(random.random())
+
+gevent.joinall([  # 等待所有，需要list
+        gevent.spawn(coroutine_work, "work1"),
+        gevent.spawn(coroutine_work, "work2")
+])  # 等待所有协程执行完，才会结束
+```
+
+协程用 gevent，前两种都是原理。
+
+##### 案例：图片下载器
+
+实现：`gevent_img_downloader.py` 文件
+
+##### 进程、线程、协程对比
+
+请仔细理解如下的通俗描述：
+
+- 有一个老板想要开个工厂进行生产某件商品（例如剪子）
+- 他需要花一些财力物力制作一条生产线，这个生产线上有很多的器件以及材料这些所有的 为了能够生产剪子而准备的资源称之为：进程
+- 只有生产线是不能够进行生产的，所以老板的找个工人来进行生产，这个工人能够利用这些材料最终一步步的将剪子做出来，这个来做事情的工人称之为：线程
+- 这个老板为了提高生产率，想到3种办法：
+  1. 在这条生产线上多招些工人，一起来做剪子，这样效率是成倍増长，即单进程 多线程方式
+  2. 老板发现这条生产线上的工人不是越多越好，因为一条生产线的资源以及材料毕竟有限，所以老板又花了些财力物力购置了另外一条生产线，然后再招些工人这样效率又再一步提高了，即多进程 多线程方式
+  3. 老板发现，现在已经有了很多条生产线，并且每条生产线上已经有很多工人了（即程序是多进程的，每个进程中又有多个线程），为了再次提高效率，老板想了个损招，规定：如果某个员工在上班时临时没事或者再等待某些条件（比如等待另一个工人生产完谋道工序 之后他才能再次工作） ，那么这个员工就利用这个时间去做其它的事情，那么也就是说：如果一个线程等待某些条件，可以充分利用这个时间去做其它事情，其实这就是：协程方式
+
+简单总结
+
+1. 进程是资源分配的单位
+2. 线程是操作系统调度的单位
+3. 进程切换需要的资源很最大，效率很低
+4. 线程切换需要的资源一般，效率一般（当然了在不考虑GIL的情况下）
+5. 协程切换任务资源很小，效率高
+6. 多进程、多线程根据cpu核数不一样可能是并行的，但是协程是在一个线程中 所以是并发
+
+### 2 Web 服务器
+
+
+
+
+
+
+
+
+
+return 类名（）   代表什么   返回一个实例对象？
+
+
+
+
+
+
+
 
 
 
@@ -1081,6 +1633,8 @@ if __name__=="__main__":
 
 #### TODO:
 
+0412
+
 回顾 PythonTips 中的内容，对照看 Vscode 的代码    完成
 
 修改 PythonTips 中的 标题，更明显一些  完成
@@ -1089,11 +1643,19 @@ if __name__=="__main__":
 
 把 udp 、tcp、线程   Vscode 的代码 再看下  完成
 
+0413
+
+自己实现 copy_process   完成
+
+再过一遍 process 代码
+
+看协程
+
 
 
 file 部分 博客  看 wb  rb
 
-
+写实拷贝  创建子进程时 会发生什么
 
 
 
