--- a/就业班.md
+++ b/就业班.md
@@ -1,4 +1,4 @@
-## 就业班
+就业班
 
 ### 0 网络编程
 
@@ -1075,6 +1075,8 @@ if __name__=="__main__":
 
 实现：`dir_copy_process.py` 文件
 
+ \r 默认将指针返回到最开始后输出（*在原位置再次输出*）
+
 #### 协程
 
 ##### 迭代器 
@@ -1605,7 +1607,635 @@ gevent.joinall([  # 等待所有，需要list
 
 ### 2 Web 服务器
 
+##### 正则表达式
 
+判断是否符合条件//数据清洗，得到想要的数据
+
+```python
+import re  # 导入re模块
+# 使用match方法进行匹配操作
+result = re.match(正则表达式,要匹配的字符串)
+# 如果上一步匹配到数据的话，可以使用group方法来提取数据
+result.group()  # 满足要求的数据
+```
+
+```python
+print(re.match(r"Chen", "ChenRong123"))  # 匹配出来陈
+# run：<re.Match object; span=(0, 4), match='Chen'>
+```
+
+match：尝试从字符串的起始位置匹配一个模式，如果不是起始位置匹配成功的话，match()就返回none。 （匹配到会返回值,不然返回None）
+
+###### 匹配单个字符
+
+正则表达式的单字符匹配：
+
+- `. `：匹配任意1个字符（除了\n）
+- `[] `：匹配[ ]中列举的字符
+- `\d `：匹配数字，即0-9
+- `\D `：匹配非数字，即不是数字，大写字母都与小写相反
+- `\s `：匹配空白，即 空格，tab键
+- `\S `：匹配非空白
+- `\w `：匹配单词字符，即a-z、A-Z、0-9、_ ，慎用，匹配中文等也可以
+- `\W `：匹配非单词字符 
+
+```python
+import re
+ret = re.match(r"t.o","two")
+print(ret.group())
+# 匹配0到9第一种写法
+ret = re.match(r"[0123456789]Hello Python","7Hello Python")
+print(ret.group())
+# 匹配0到9第二种写法
+ret = re.match(r"[0-9]Hello Python","7Hello Python")  # 连续的可以用 -
+print(ret.group())
+# 下面这个正则不能够匹配到数字4，因此ret为None
+ret = re.match(r"[0-35-9]Hello Python","4Hello Python")
+ret = re.match(r"[1-8a-c]Hello Python","aHello Python")  # 可以组合字母与数字
+print(ret.group())
+# 使用\d进行匹配
+ret = re.match(r"嫦娥\d号","嫦娥1号发射成功") 
+print(ret.group())
+# 使用\w进行匹配
+ret = re.match(r"\wHello Python","_Hello Python")
+print(ret.group())
+ret = re.match(r"\wHello Python","=Hello Python")
+```
+
+###### 匹配多个字符
+
+匹配多个字符的相关格式，与其他配合
+
+- `*`：匹配前一个字符出现0次或者无限次，即可有可无
+- `+`：匹配前一个字符出现1次或者无限次，即至少有1次
+- `?`：匹配前一个字符出现1次或者0次，即要么有1次，要么没有
+- `{m}`：匹配前一个字符出现m次
+- `{m,n}`：匹配前一个字符出现从m到n次
+
+```python
+import re
+ret = re.match(r"\d{3,4}-?\d{8}","010-12345678")
+print(ret.group())
+html_content = """
+sadad
+caacd
+23dcd
+"""
+ret = re.match(r".*",html_content)
+print(ret.group())  # sadad
+ret = re.match(r".*",html_content, re.S)  # re.S 使. 匹配 \n
+print(ret.group())
+# 匹配变量名是否有效
+names = ["age", "_age", "1age", "age1", "a_age", "age_1_", "age!", "a#123", "__________"]
+for name in names:
+    # ^规定开头  $规定结尾  
+    # python中的match默认是从头开始判断的所以，在match中可以不写^，
+    # 但是match不会判断结尾，所以当需要以xxx结尾的时候 还需要写上$
+    # ret = re.match(r"[A-Za-Z_]+[A-Za-Z_0-9]*", name) # 不需要+，这样就是一位
+    ret = re.match(r"^[A-Za-Z_]+[A-Za-Z_0-9]*$", name)
+    if ret:
+        print("变量名:%s 符合要求....通过正则匹配出来的数据是:%s" % (name, ret.group()))
+    else:
+        print("变量名:%s 不符合要求...." % name)
+```
+
+###### 匹配开头结尾
+
+- `^`：匹配字符串开头  （还有取反的含义）
+- `$`：匹配字符串结尾
+
+```python
+# 匹配出163的邮箱地址，且@符号之前有4到20位英文、数字、下划线，例如hello@163.com
+import re
+email = input("请输入一个邮箱地址:")
+# 如果在正则表达式中需要用到了某些普通的字符，比如 . 比如? 等，
+# 仅仅需要在他们前面添加一个 反斜杠进行转义
+ret = re.match(r"[a-zA-Z0-9_]{4,20}@163\.com$", email)
+if ret:
+	print("%s符合要求...." % email)
+else:
+	print("%s不符合要求...." % email)
+```
+
+###### 匹配分组
+
+- `|`：匹配左右任意一个表达式
+- `(ab)`：将括号中字符作为一个分组
+- `\num`：引用分组num匹配到的字符串
+- `(?P<name>)`：分组起别名
+- `(?P=name)`：引用别名为name分组匹配到的字符串
+
+```python
+ret = re.match("[a-zA-Z0-9_]{4,20}@(163|126|qq)\.com$", "test@qq.com")
+print(ret.group())  # test@qq.com
+# () 还可以取数据 匹配成功后的
+ret = re.match("([a-zA-Z0-9_]{4,20})@(163|126|qq)\.com$", "test@qq.com")
+print(ret.group(1))  # test
+print(ret.group(2))  # qq
+# 使用 \num
+ret = re.match(r"<([a-zA-Z]*)>\w*</\1>", "<html>hh</html>")  # \1 取分组中匹配的值
+print(ret.group())
+html_str = "<body><h1>hahahah</h1></body>"
+ret = re.match(r"<(\w*)><(\w*)>.*</\2></\1>", html_str)
+print(ret.group())
+# 使用 (?P<name>)、(?P=name) 适用于分组很多时
+ret = re.match(r"<(?P<p1>\w*)><(?P<p2>\w*)>.*</(?P=p2)></(?P=p1)>", html_str)
+print(ret.group())
+```
+
+###### re 模块的高级用法
+
+search： 扫描整个字符串并返回第一个成功的匹配。 
+
+```python
+import re
+ret = re.search(r"\d+", "阅读次数为 9999")
+print(ret.group())  # 9999
+```
+
+findall：在字符串中找到正则表达式所匹配的所有子串，并返回一个列表，如果没有找到匹配的，则返回空列表。
+
+```python
+import re
+ret = re.findall(r"\d+", "python = 9999, c = 7890, c++ = 12345")
+print(ret)  # ['9999', '7890', '12345']
+```
+
+sub：用于替换字符串中的匹配项 
+
+```python
+import re
+ret = re.sub(r"\d+", '998', "python = 997, c++ = 1024")
+print(ret)  # python = 998, c++ = 998
+# sub 支持函数调用
+def add(temp):
+    strNum = temp.group()
+    num = int(strNum) + 1
+    return str(num)
+ret = re.sub(r"\d+", add, "python = 99")
+print(ret)  # python = 100
+```
+
+split：按照能够匹配的子串将字符串分割后返回列表
+
+```python
+import re
+ret = re.split(r":| ","info:xiaoZhang 33 shandong")
+print(ret)  # ['info', 'xiaoZhang', '33', 'shandong']
+```
+
+```python
+import re
+html_str = """
+<dd class="job_bt">
+        <h3 class="description">职位描述：</h3>
+        <div>
+        <p>职位诱惑：<br>机器学习相关项目，完全新技术驱动，互联网公司，工作氛围好，扁平管理，有技术大牛带<br><br>职位描述：<br>配合架构师和机器学习专家，完成项目的编码、测试和上线。<br><br>我们期望：<br>1.&nbsp;211院校计算机相关专业本科以上学历；<br>2.&nbsp;有扎实的编程和计算机基础，熟悉常用算法和数据结构。<br>3.&nbsp;具有很强的问题解决能力，综合知识（或者通过搜索能快速掌握知识）强，了解前端、网络、多线程、数据库、Web开发等知识。<br>4.&nbsp;2年以上工作经验（Python或者JAVA方向，如果编程能力特别过硬可以放开语言要求）；<br><br>工作内容：<br>1.&nbsp;根据业务需求进行需求分析和代码编写；<br>2.&nbsp;结合系统实现对代码进行充分的自测，以及配合测试工程师联合进行测试；<br>3.&nbsp;配合机器学习算法专家进行代码编写</p>
+        </div>
+    </dd>
+"""
+ret = re.findall(r"<[^>]*>", html_str)
+# [^>]表示不是 > 的字符，*表示重复零次或更多次，这个意思是非 > 的字符可以有一个或多个，也可以没有。
+# 意思就是不能有 > ,这 把 * 换为 + 一样  因为没有 <>这种
+print(ret)
+ret = re.sub(r"<[^>]*>|\s|&nbsp;", "", html_str)
+print(ret)5
+```
+
+ 当符号`^`在方括号表达式(`[]`)中使用时，表示不接受该方括号表达式中的字符集合。要匹配`^`字符本身，请使用 `\^`。 
+
+###### 贪婪和非贪婪
+
+Python里数量词默认是贪婪的，总是尝试匹配尽可能多的字符；非贪婪则相反，总是尝试匹配尽可能少的字符。在"*","?","+","{m,n}"后面加上？，使贪婪变成非贪婪。
+
+```python
+import re
+s="This is a number 234-235-22-423"
+r=re.match(r".+(\d+-\d+-\d+-\d+)",s)
+print(r.group(1))  # '4-235-22-423'
+r=re.match(r".+?(\d+-\d+-\d+-\d+)",s)
+print(r.group(1))  # '234-235-22-423'
+```
+
+正则表达式模式中使用到通配字，那它在从左到右的顺序求值时，会尽量“抓取”满足匹配最长字符串，在我们上面的例子里面，“.+”会从字符串的启始处抓取满足模式的最长字符，其中包括我们想得到的第一个整型字段的中的大部分，“\d+”只需一位字符就可以匹配，所以它匹配了数字“4”，而“.+”则匹配了从字符串起始到这个第一位数字4之前的所有字符。
+
+解决方式：非贪婪操作符“？”，这个操作符可以用在"*","+","?"的后面，要求正则匹配的越少越好。
+
+```python
+import re
+ret = re.match(r"aa(\d+?)","aa2343ddd")
+print(ret.group(1))  # '2'
+ret = re.match(r"aa(\d+?)ddd","aa2343ddd")
+print(ret.group(1))  # '2343'  由于限制了后边 非贪婪也是同样的结果
+img_url = """<img data-original="https://rpic.douyucdn.cn/appCovers/2016/11/13/1213973_201611131917_small.jpg" src="https://rpic.douyucdn.cn/appCovers/2016/11/13/1213973_201611131917_small.jpg" style="display: inline;">"""
+ret = re.search(r"https://.*?\.jpg", img_url)
+print(ret.group())
+```
+
+###### r 的作用
+
+ Python中字符串前面加上 r 表示原生字符串 
+
+```python
+import re
+my_path = "c:\\a\\b\\c"
+print(my_path)
+print(re.match("c:\\\\a\\\\b\\\\c", my_path).group())
+print(re.match(r"c:\\a\\b\\c", my_path).group())
+```
+
+正则表达式里使用 `\`作为转义字符，这就可能造成反斜杠困扰。假如你需要匹配文本中的字符`\`，那么使用编程语言表示的正则表达式里将需要4个反斜杠`\\\\`：前两个和后两个分别用于在编程语言里转义成反斜杠，转换成两个反斜杠后再在正则表达式里转义成一个反斜杠。
+
+Python里的原生字符串很好地解决了这个问题，有了原生字符串，再也不用担心是不是漏写了反斜杠，写出来的表达式也更直观。
+
+>  正则表达式使用反斜杆道（`\`）来转义特殊字符，使其可以匹配字符本身，而不是指定其他特殊的含义。这可能会和python字面意义上的字符串转义相冲突，这也许有些令人费解。比如，要匹配一个反斜杆本身，你也许要用`\\\\`来做为专正则表达式的字符串，因为正则表达式要是`\\`，而字符串里，每个反斜杆都要写成`\\` 。
+>
+> 你也可以在字符串前加上 r 这个前缀来避免部分疑惑，因为 r 开头的python字符串是 raw 字符串，所以里面的所有字符都不会被转义，比如属`r'\n'`这个字符串就是一个反斜杆加上一字母n，而`'\n'`我们知道这是个换行符。因此，上面的`'\\\\'`你也可以写成`r'\\'`，这样，应该就好理解很多了。
+
+##### HTTP 协议简介
+
+在Web应用中，服务器把网页传给浏览器，实际上就是把网页的HTML代码发送给浏览器，让浏览器显示出来。而浏览器和服务器之间的传输协议是HTTP，所以：
+
+- HTML是一种用来定义网页的文本，会HTML，就可以编写网页；
+- HTTP是在网络上传输HTML的协议，用于浏览器和服务器的通信。
+
+开发者工具中：Elements显示网页的结构、Network显示浏览器和服务器的通信
+
+###### HTTP 协议的分析
+
+发送或响应的数据是有格式的，这就是HTTP协议
+
+可用网络调试助手和浏览器模拟请求与响应
+
+###### 浏览器请求
+
+最主要的头两行分析如下，第一行：`GET / HTTP/1.1`
+
+GET表示一个读取请求，将从服务器获得网页数据（要），/表示URL的路径，URL总是以/开头，/就表示首页，最后的HTTP/1.1指示采用的HTTP协议版本是1.1。目前HTTP协议的版本就是1.1，但是大部分服务器也支持1.0版本，主要区别在于1.1版本允许多个HTTP请求复用一个TCP连接，以加快传输速度。
+
+从第二行开始，每一行都类似于Xxx: abcdefg（为字符串），如`Host: www.sina.com`，表示请求的域名是`www.sina.com`。如果一台服务器有多个网站，服务器就需要通过Host来区分浏览器请求的是哪个网站。
+
+> 长连接；接受的格式；浏览器版本；接受的压缩格式；接受的语言 等等
+
+**发送的Header是告诉服务器怎么做/要求**
+
+发送的请求格式如下：
+
+```http
+GET / HTTP/1.1
+Host: www.baidu.com
+Connection: keep-alive
+Cache-Control: max-age=0
+Upgrade-Insecure-Requests: 1
+User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.131 Safari/537.36
+Accept:text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3
+Accept-Encoding: gzip, deflate, br
+Accept-Language: zh-CN,zh;q=0.9
+```
+
+POST 时 会有 Body。
+
+###### 服务器响应
+
+HTTP响应分为Header和Body两部分（Body是可选项），我们在Network中看到的Header最重要的几行如下：
+
+`HTTP/1.1 200 OK`
+
+200表示一个成功的响应，后面的OK是说明。如果返回的不是200，那么往往有其他的功能，例如：失败的响应有404 Not Found：网页不存在；500 Internal Server Error：服务器内部出错；等等。
+
+`Content-Type: text/html`
+
+Content-Type指示响应的内容，这里是text/html表示HTML网页。
+
+> 请注意，浏览器就是依靠Content-Type来判断响应的内容是网页还是图片，是视频还是音乐。浏览器并不靠URL来判断响应的内容，所以，即使URL是`http://www.baidu.com/meimei.jpg`，它也不一定就是图片。
+
+**响应的Header是告诉浏览器怎么做/要求**
+
+响应的数据格式如下：
+
+```http
+HTTP/1.1 200 OK
+Bdpagetype: 2
+Bdqid: 0xced4a9a1000734e4
+Cache-Control: private
+Connection: keep-alive
+Content-Encoding: gzip
+Content-Type: text/html;charset=utf-8
+Date: Tue, 14 Apr 2020 09:38:07 GMT
+Expires: Tue, 14 Apr 2020 09:38:06 GMT
+Server: BWS/1.1
+Set-Cookie: BDSVRTM=316; path=/
+Set-Cookie: BD_HOME=1; path=/
+Set-Cookie: H_PS_PSSID=1461_31125_21111_31187_30908_30823_31085_31164_31196; path=/; domain=.baidu.com
+Strict-Transport-Security: max-age=172800
+Traceid: 1586857087060169268214903723575831114980
+X-Ua-Compatible: IE=Edge,chrome=1
+Transfer-Encoding: chunked
+
+<!DOCTYPE html>
+等等
+```
+
+HTTP响应的Body就是HTML源码，查看网页源码可以在浏览器中直接查看HTML源码。
+
+Header是连续的，没有空行，只要有空行，则后边内容为Body。
+
+###### 浏览器解析过程
+
+当浏览器读取到新浪首页的HTML源码后，它会解析HTML，显示页面，然后，根据HTML里面的各种链接，再发送HTTP请求给新浪服务器，拿到相应的图片、视频、Flash、JavaScript脚本、CSS等各种资源，最终显示出一个完整的页面。所以我们在Network下面能看到很多额外的HTTP请求。
+
+###### HTTP 小结
+
+HTTP 请求与响应
+
+步骤1：浏览器首先向服务器发送HTTP请求，请求包括：
+
+> 方法：GET还是POST，GET仅请求资源，POST会附带用户数据；
+>
+> 路径：/full/url/path；
+>
+> 域名：由Host头指定：Host: www.sina.com
+>
+> 以及其他相关的Header；
+>
+> 如果是POST，那么请求还包括一个Body，包含用户数据
+
+步骤2：服务器向浏览器返回HTTP响应，响应包括：
+
+> 响应代码：200表示成功，3xx表示重定向，4xx表示客户端发送的请求有错误，5xx表示服务器端处理时发生了错误；
+>
+> 响应类型：由Content-Type指定；
+>
+> 以及其他相关的Header；
+>
+> 通常服务器的HTTP响应会携带内容，也就是有一个Body，包含响应的内容，网页的HTML源码就在Body中。
+
+步骤3：如果浏览器还需要继续向服务器请求其他资源，比如图片，就再次发出HTTP请求，重复步骤1、2。
+
+> Web采用的HTTP协议采用了非常简单的请求-响应模式，从而大大简化了开发。当我们编写一个页面时，我们只需要在HTTP请求中把HTML发送出去，不需要考虑如何附带图片、视频等，浏览器如果需要请求图片和视频，它会发送另一个HTTP请求，因此，一个HTTP请求只处理一个资源(此时就可以理解为TCP协议中的短连接，每个链接只获取一个资源，如需要多个就需要建立多个链接)
+
+HTTP协议同时具备极强的扩展性，虽然浏览器请求的是`http://www.sina.com`的首页，但是新浪在HTML中可以链入其他服务器的资源，比如`<img src="http://i1.sinaimg.cn/home/2013/1008/U8455P30DT20131008135420.png">  `，从而将请求压力分散到各个服务器上，并且，一个站点可以链接到其他站点，无数个站点互相链接起来，就形成了World Wide Web，简称WWW。
+
+HTTP 格式
+
+每个HTTP请求和响应都遵循相同的格式，一个HTTP包含Header和Body两部分，其中Body是可选的。
+
+HTTP协议是一种文本协议，所以，它的格式也非常简单。
+
+**HTTP GET请求的格式：**
+
+```http
+GET /path HTTP/1.1
+Header1: Value1
+Header2: Value2
+Header3: Value3
+```
+
+每个Header一行一个，换行符是\r\n。
+
+**HTTP POST请求的格式：**
+
+```http
+    POST /path HTTP/1.1
+    Header1: Value1
+    Header2: Value2
+    Header3: Value3
+
+    body data goes here...
+```
+
+当遇到连续两个\r\n时，Header部分结束，后面的数据全部是Body。
+
+**HTTP响应的格式：**
+
+````
+    200 OK
+    Header1: Value1
+    Header2: Value2
+    Header3: Value3
+
+    body data goes here...
+```
+
+HTTP响应如果包含body，也是通过\r\n\r\n来分隔的。
+
+请再次注意，Body的数据类型由Content-Type头来确定，如果是网页，Body就是文本，如果是图片，Body就是图片的二进制数据。
+
+当存在Content-Encoding时，Body数据是被压缩的，最常见的压缩方式是gzip，所以，看到Content-Encoding: gzip时，需要将Body数据先解压缩，才能得到真正的数据。压缩的目的在于减少Body的大小，加快网络传输。
+
+##### Web静态服务器-1-显示固定的页面
+
+python 实现服务器，浏览器请求
+
+```python
+import socket
+def service_client(new_socket):
+    """为这个客户端返回数据"""
+    # 1. 接收浏览器发送过来的请求 ，即http请求  
+    # GET / HTTP/1.1
+    # .....
+    request = new_socket.recv(1024)
+    print(request)
+    # 2. 返回http格式的数据，给浏览器
+    # 2.1 准备发送给浏览器的数据---header
+    response = "HTTP/1.1 200 OK\r\n"
+    response += "\r\n"  # 浏览器解析换行 用\r\n
+    # 2.2 准备发送给浏览器的数据---boy
+    response += "hahahhah"
+    new_socket.send(response.encode("utf-8"))
+    # 关闭套接字 !
+    new_socket.close()
+def main():
+    """用来完成整体的控制"""
+    # 1. 创建套接字
+    tcp_server_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+    # 2. 绑定
+    tcp_server_socket.bind(("", 7890))
+    # 3. 变为监听套接字
+    tcp_server_socket.listen(128)
+    while True:
+        # 4. 等待新客户端的链接
+        new_socket, client_addr = tcp_server_socket.accept()
+        # 5. 为这个客户端服务
+        service_client(new_socket)
+    # 关闭监听套接字 !
+    tcp_server_socket.close()
+if __name__ == "__main__":
+    main()
+```
+
+##### TCP 的`3`次握手
+
+
+
+##### TCP 的`4`次握手
+
+
+
+
+
+4次原因
+
+
+
+服务器 超时时间
+
+客户端 等2分多 防止 服务器没收到应答，再次发送
+
+ 2 MSL
+
+谁先调 close  谁等待
+
+客户端端口随机
+
+
+
+##### Web静态服务器-2-显示需要的页面
+
+
+
+这的实现
+
+
+
+
+
+##### Web静态服务器-3-多进程
+
+
+
+##### Web静态服务器-4-多线程
+
+
+
+
+
+3次握手的开始是 connect发起，成功是服务器调用 accept
+
+多进程、多线程 在请求量的大时消耗资源过大
+
+##### Web静态服务器-5-协程
+
+
+
+
+
+08-单进程-单线程-非堵塞
+
+单进程-单线程 时 会在 recv() 堵塞， accept无法服务 
+
+实现 单进程-单线程 时 不堵塞
+
+套接字默认堵塞
+
+`tcp_server_tcp.setblocking(False)  # 设置套接字为非堵塞的方式`
+
+非堵塞时，accept() 、recv()数据没来 会产生异常
+
+```python
+while True:
+    try:
+        new_socket, new_addr = tcp_server_tcp.accept()
+    except Exception as ret:
+        print("---没有新的客户端到来---")
+    else:
+        print("---只要没有产生异常，那么也就意味着 来了一个新的客户端----")
+        new_socket.setblocking(False)  # 设置套接字为非堵塞的方式 因为默认堵塞
+        try:
+            recv_data = new_socket.recv(1024)
+           except Exception as ret:
+                print(ret)
+                print("----这个客户端没有发送过来数据----")
+            else:
+                print("-----没有异常,客户端发送过来数据-----")
+                print(recv_data)
+        # 上面存在问题 有一个客户端到来时 但没有数据，再次while时 就变为等新客户端到来
+        # 把 第二个 try 移出去， 使用list 保存 请求的客户端
+        # client_socket_list.append(new_socket)
+client_socket_list = list()
+while True:
+    time.sleep(0.5)
+    try:
+        new_socket, new_addr = tcp_server_tcp.accept()
+    except Exception as ret:
+        print("---没有新的客户端到来---")
+    else:
+        print("---只要没有产生异常，那么也就意味着 来了一个新的客户端----")
+        new_socket.setblocking(False)  # 设置套接字为非堵塞的方式
+        client_socket_list.append(new_socket)
+
+    for client_socket in client_socket_list:
+        try:
+            recv_data = client_socket.recv(1024)  # 对方调用close后 删除套接字
+        except Exception as ret:
+            print(ret)
+            print("----这个客户端没有发送过来数据----")
+        else:
+            print("-----没有异常-----")
+            print(recv_data)
+            if recv_data:
+                # 对方发送过来数据
+                print("----客户端发送过来了数据-----")
+            else:
+                # 对方调用close 导致了 recv返回
+                client_socket.close()  # 这都是引用 执行顺序可以换
+                client_socket_list.remove(client_socket)
+                print("---客户端已经关闭----")
+```
+
+实现 单进程 单线程 监听多个套接字
+
+普通的方式  单进程 单线程 会堵塞  导致多浏览器访问时等待  所有使用 多线程、多进程 为其服务，上边是 单进程 单线程 通过非阻塞 监听多个套接字，实现同样的目的
+
+是并发服务器       因为列表的循环执行的
+
+电脑会先收数据，有个缓存区，recv 时 取走数据  没有 产生异常/堵塞
+
+0.5 秒后 检查    短时间点的，在缓存区的，会一起取走
+
+
+
+长连接、短连接
+
+HTTP/1.1 -- 长连接    HTTP/1.0 -- 短连接
+
+短链接 是 为了获取数据 3次握手 建立连接  。。。
+
+例如网页图片多时，需要都从服务器获取，短连接方式，服务器需要多个进程/线程 处理，浪费资源
+
+浏览器会多进程/线程请求资源？
+
+长连接时不会再建立新的 进程/线程/协程
+
+ 08 这截个图
+
+现在实现的代码都是短连接  因为虽然用的 HTTP/1.1 但是服务器返回数据后，关闭套接字，断开连接了
+
+
+
+单进程-单线程-非堵塞 长连接
+
+
+
+epoll   linux服务器采用
+
+nginx 采用 epoll 实现
+
+epoll   是单进程 单线程 
+
+epoll 将列表放入特殊内存空间，应用和内核都可访问，没有拷贝过程   套接字的文件描述符检测时不遍历，通过事件通知方式
+
+轮询    遍历    
+
+事件通知    哪个套接字数据到了，通知套接字收
+
+特点：**共享内存**、**事件通知**
+
+
+
+epoll 实现 HTTP(了解)
+
+原来是应用检测
 
 
 
