--- a/就业班.md
+++ b/就业班.md
@@ -2613,9 +2613,80 @@ if __name__ == "__main__":
     main()
 ```
 
+#### 网络通信
+
+##### TCP/IP
+
+协议就是一个规定
+
+为了把全世界的所有不同类型的计算机都连接起来，就必须规定一套全球通用的协议，为了实现互联网这个目标，互联网协议族（Internet Protocol Suite）就是通用协议标准。
+
+因为互联网协议包含了上百种协议标准，但是最重要的两个协议是TCP和IP协议，所以，大家把互联网的协议**简称TCP/IP协议(族)**
+
+常用的网络协议如下图所示：
 
 
 
+
+
+
+
+事实标准 理论标准
+
+
+
+
+
+
+
+
+
+tcp    ip.src   ip.dst    udp.port == 2405
+
+ip.src == 192.168.33.45 and(or) udp
+
+确定发送成功与否 判断哪出问题
+
+
+
+发给谁  ip
+
+网络掩码   与 ip  按位与操作   都1 为1  
+
+确定 主机号  网络号   确定是否为同一网络
+
+网卡要先判断  需要 mac地址   arp 
+
+网卡默认接收  FF:FF:FF:FF:FF:FF
+
+去是广播  回不是
+
+
+
+网线是电信号 不能像电线一样接
+
+
+
+网络掩码   网络号
+
+默认网关    具有转发数据得设备 网关
+
+路由器连接不同网络
+
+路由器 同一台电脑 两个网卡    ip地址不变  源、目的mac在变
+
+
+
+通信过程：
+
+1 DNS 解析 域名    有 DNS 的ip，，得先发送给网关，，得先发 arp 得到 网关
+
+2  向服务器 3 次握手
+
+3 以tcp的方式发送http协议的请求数据 给 服务器
+4 服务器tcp的方式回应http协议的应答数据 给浏览器
+
+为什么用mac   可以查查
 
 
 
